export const snapshot = {};

snapshot[`generateGcpExtensionModel - all handlers, natural naming 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/instances
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Instances.
 *
 * A compute engine instance
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, deleteResource, getProjectId, isResourceNotFoundError, readResource, updateResource } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const GET_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "GET",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.get"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances",
  "httpMethod": "POST",
  "parameterOrder": [
    "project",
    "zone"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.insert"
} as const;

const PATCH_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "PATCH",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.patch"
} as const;

const DELETE_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "DELETE",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.delete"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name"),
  zone: z.string().describe("Zone"),
  machineType: z.string().describe("Machine type"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  id: z.string().optional(),
  zone: z.string().optional(),
  machineType: z.string().optional(),
  status: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Instance name").optional(),
  zone: z.string().describe("Zone").optional(),
  machineType: z.string().describe("Machine type").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Instances. Registered at \`@swamp/gcp/compute/instances\`. */
export const model = {
  type: "@swamp/gcp/compute/instances",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A compute engine instance",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a instances",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        if (g["machineType"] !== undefined) body["machineType"] = g["machineType"];
        if (g["name"] !== undefined) params["instance"] = String(g["name"]);
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update instances attributes",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        else if (existing["zone"]) params["zone"] = String(existing["zone"]);
        params["instance"] = existing["name"]?.toString() ?? "";
        const body: Record<string, unknown> = {};
        if (g["machineType"] !== undefined) body["machineType"] = g["machineType"];
        for (const key of Object.keys(existing)) {
          if (key === "fingerprint" || key === "labelFingerprint" || key === "etag" || key.endsWith("Fingerprint")) {
            body[key] = existing[key];
          }
        }
        const result = await updateResource(BASE_URL, PATCH_CONFIG, params, body, GET_CONFIG) as StateData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const { existed } = await deleteResource(BASE_URL, DELETE_CONFIG, params);
        const instanceName = (g.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync instances state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
          else if (existing["zone"]) params["zone"] = String(existing["zone"]);
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          params["instance"] = identifier;
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - readiness polling 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/instances
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Instances.
 *
 * A compute engine instance
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, deleteResource, getProjectId, isResourceNotFoundError, readResource, updateResource } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const GET_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "GET",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.get"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances",
  "httpMethod": "POST",
  "parameterOrder": [
    "project",
    "zone"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.insert"
} as const;

const PATCH_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "PATCH",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.patch"
} as const;

const DELETE_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "DELETE",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.delete"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name"),
  zone: z.string().describe("Zone"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  zone: z.string().optional(),
  status: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Instance name").optional(),
  zone: z.string().describe("Zone").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Instances. Registered at \`@swamp/gcp/compute/instances\`. */
export const model = {
  type: "@swamp/gcp/compute/instances",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A compute engine instance",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a instances",
      arguments: z.object({ waitForReady: z.boolean().describe("Wait for the resource to reach a ready state after creation (default: true)").optional() }),
      execute: async (args: { waitForReady?: boolean }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        if (g["name"] !== undefined) params["instance"] = String(g["name"]);
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG, (args.waitForReady ?? true) ? {"statusField":"status","readyValues":["RUNNING"],"failedValues":["TERMINATED","SUSPENDED"]} : undefined) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update instances attributes",
      arguments: z.object({ waitForReady: z.boolean().describe("Wait for the resource to reach a ready state after update (default: true)").optional() }),
      execute: async (args: { waitForReady?: boolean }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        else if (existing["zone"]) params["zone"] = String(existing["zone"]);
        params["instance"] = existing["name"]?.toString() ?? "";
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        for (const key of Object.keys(existing)) {
          if (key === "fingerprint" || key === "labelFingerprint" || key === "etag" || key.endsWith("Fingerprint")) {
            body[key] = existing[key];
          }
        }
        const result = await updateResource(BASE_URL, PATCH_CONFIG, params, body, GET_CONFIG, (args.waitForReady ?? true) ? {"statusField":"status","readyValues":["RUNNING"],"failedValues":["TERMINATED","SUSPENDED"]} : undefined) as StateData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const { existed } = await deleteResource(BASE_URL, DELETE_CONFIG, params);
        const instanceName = (g.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync instances state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
          else if (existing["zone"]) params["zone"] = String(existing["zone"]);
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          params["instance"] = identifier;
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - listOnly resource 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/regions
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Regions.
 *
 * A compute engine region
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, getProjectId, isResourceNotFoundError, readViaList } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const LIST_CONFIG = {
  "path": "projects/{project}/regions",
  "httpMethod": "GET",
  "parameterOrder": [
    "project"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.regions.list"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/regions",
  "httpMethod": "POST",
  "parameterOrder": [
    "project"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.regions.insert"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Region name"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  status: z.string().optional(),
  id: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Region name").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Regions. Registered at \`@swamp/gcp/compute/regions\`. */
export const model = {
  type: "@swamp/gcp/compute/regions",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A compute engine region",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a regions",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a regions",
      arguments: z.object({ identifier: z.string().describe("The name of the regions") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        const result = await readViaList(BASE_URL, LIST_CONFIG, params, "name", args.identifier) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync regions state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          const result = await readViaList(BASE_URL, LIST_CONFIG, params, "name", identifier) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - full resource name pattern 1`] = `
'// Auto-generated extension model for @swamp/gcp/serviceusage/services
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Service Usage Services.
 *
 * A managed service
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, deleteResource, getProjectId, isResourceNotFoundError, readResource } from "./_lib/gcp.ts";

/** Construct the fully-qualified resource name from parent and short name. */
function buildResourceName(parent: string, shortName: string): string {
  return \`\${parent}/services/\${shortName}\`;
}

const BASE_URL = "https://serviceusage.googleapis.com/v1";

const GET_CONFIG = {
  "path": "v1/{+name}",
  "httpMethod": "GET",
  "parameterOrder": [
    "name"
  ],
  "parameters": {
    "name": {
      "location": "path",
      "required": true
    }
  },
  "id": "serviceusage.services.get"
} as const;

const INSERT_CONFIG = {
  "path": "v1/{+name}:enable",
  "httpMethod": "POST",
  "parameterOrder": [
    "name"
  ],
  "parameters": {
    "name": {
      "location": "path",
      "required": true
    }
  },
  "id": "serviceusage.services.enable"
} as const;

const DELETE_CONFIG = {
  "path": "v1/{+name}:disable",
  "httpMethod": "POST",
  "parameterOrder": [
    "name"
  ],
  "parameters": {
    "name": {
      "location": "path",
      "required": true
    }
  },
  "id": "serviceusage.services.disable"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Service name"),
  parent: z.string().describe("Parent resource"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  config: z.record(z.string(), z.unknown()).optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Service name").optional(),
  parent: z.string().describe("Parent resource").optional(),
});

/** Swamp extension model for Google Cloud Service Usage Services. Registered at \`@swamp/gcp/serviceusage/services\`. */
export const model = {
  type: "@swamp/gcp/serviceusage/services",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A managed service",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a services",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["name"] !== undefined) params["name"] = String(g["name"]);
        const body: Record<string, unknown> = {};
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a services",
      arguments: z.object({ identifier: z.string().describe("The name of the services") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        params["name"] = buildResourceName(String(g["parent"] ?? ""), args.identifier);
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the services",
      arguments: z.object({ identifier: z.string().describe("The name of the services") }),
      execute: async (args: { identifier: string }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        params["name"] = buildResourceName(String(g["parent"] ?? ""), args.identifier);
        const { existed } = await deleteResource(BASE_URL, DELETE_CONFIG, params);
        const instanceName = (g.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync services state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          const shortName = existing.name?.toString() ?? g["name"]?.toString();
          if (!shortName) throw new Error("No identifier found");
          params["name"] = buildResourceName(String(g["parent"] ?? ""), shortName);
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - action methods 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/instances
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Instances.
 *
 * A compute engine instance
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, deleteResource, getProjectId, isResourceNotFoundError, readResource } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const GET_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "GET",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.get"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances",
  "httpMethod": "POST",
  "parameterOrder": [
    "project",
    "zone"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.insert"
} as const;

const DELETE_CONFIG = {
  "path": "projects/{project}/zones/{zone}/instances/{instance}",
  "httpMethod": "DELETE",
  "parameterOrder": [
    "project",
    "zone",
    "instance"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "zone": {
      "location": "path",
      "required": true
    },
    "instance": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.instances.delete"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name"),
  zone: z.string().describe("Zone"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  zone: z.string().optional(),
  status: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Instance name").optional(),
  zone: z.string().describe("Zone").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Instances. Registered at \`@swamp/gcp/compute/instances\`. */
export const model = {
  type: "@swamp/gcp/compute/instances",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A compute engine instance",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a instances",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        if (g["name"] !== undefined) params["instance"] = String(g["name"]);
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the instances",
      arguments: z.object({ identifier: z.string().describe("The name of the instances") }),
      execute: async (args: { identifier: string }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        params["instance"] = args.identifier;
        const { existed } = await deleteResource(BASE_URL, DELETE_CONFIG, params);
        const instanceName = (g.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync instances state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
          else if (existing["zone"]) params["zone"] = String(existing["zone"]);
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          params["instance"] = identifier;
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
    start: {
      description: "start",
      arguments: z.object({}),
      execute: async (_args: Record<string, unknown>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, ""),
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        params["instance"] = existing["name"]?.toString() ?? g["name"]?.toString() ?? "";
        const result = await createResource(BASE_URL, {"id":"compute.instances.start","path":"projects/{project}/zones/{zone}/instances/{instance}/start","httpMethod":"POST","parameterOrder":["project","zone","instance"],"parameters":{"project":{"location":"path","required":true},"zone":{"location":"path","required":true},"instance":{"location":"path","required":true}}}, params, {});
        return { result };
      },
    },
    stop: {
      description: "stop",
      arguments: z.object({}),
      execute: async (_args: Record<string, unknown>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        if (g["zone"] !== undefined) params["zone"] = String(g["zone"]);
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, ""),
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        params["instance"] = existing["name"]?.toString() ?? g["name"]?.toString() ?? "";
        const result = await createResource(BASE_URL, {"id":"compute.instances.stop","path":"projects/{project}/zones/{zone}/instances/{instance}/stop","httpMethod":"POST","parameterOrder":["project","zone","instance"],"parameters":{"project":{"location":"path","required":true},"zone":{"location":"path","required":true},"instance":{"location":"path","required":true}}}, params, {});
        return { result };
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - no update or delete handlers 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/snapshots
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Snapshots.
 *
 * A compute engine disk snapshot
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, getProjectId, isResourceNotFoundError, readResource } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const GET_CONFIG = {
  "path": "projects/{project}/global/snapshots/{snapshot}",
  "httpMethod": "GET",
  "parameterOrder": [
    "project",
    "snapshot"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "snapshot": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.snapshots.get"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/global/snapshots",
  "httpMethod": "POST",
  "parameterOrder": [
    "project"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.snapshots.insert"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Snapshot name"),
  sourceDisk: z.string().describe("Source disk"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  id: z.string().optional(),
  sourceDisk: z.string().optional(),
  status: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Snapshot name").optional(),
  sourceDisk: z.string().describe("Source disk").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Snapshots. Registered at \`@swamp/gcp/compute/snapshots\`. */
export const model = {
  type: "@swamp/gcp/compute/snapshots",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A compute engine disk snapshot",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a snapshots",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        if (g["sourceDisk"] !== undefined) body["sourceDisk"] = g["sourceDisk"];
        if (g["name"] !== undefined) params["snapshot"] = String(g["name"]);
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a snapshots",
      arguments: z.object({ identifier: z.string().describe("The name of the snapshots") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        params["snapshot"] = args.identifier;
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync snapshots state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          params["snapshot"] = identifier;
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateGcpExtensionModel - with upgrades block 1`] = `
'// Auto-generated extension model for @swamp/gcp/compute/firewalls
// Do not edit manually. Re-generate with: deno task generate:gcp

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for Google Cloud Compute Engine Firewalls.
 *
 * A VPC firewall rule
 *
 * Wraps the GCP resource as a swamp model so create, get, update,
 * delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { createResource, deleteResource, getProjectId, isResourceNotFoundError, readResource, updateResource } from "./_lib/gcp.ts";

const BASE_URL = "https://compute.googleapis.com/compute/v1";

const GET_CONFIG = {
  "path": "projects/{project}/global/firewalls/{firewall}",
  "httpMethod": "GET",
  "parameterOrder": [
    "project",
    "firewall"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "firewall": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.firewalls.get"
} as const;

const INSERT_CONFIG = {
  "path": "projects/{project}/global/firewalls",
  "httpMethod": "POST",
  "parameterOrder": [
    "project"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.firewalls.insert"
} as const;

const PATCH_CONFIG = {
  "path": "projects/{project}/global/firewalls/{firewall}",
  "httpMethod": "PATCH",
  "parameterOrder": [
    "project",
    "firewall"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "firewall": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.firewalls.patch"
} as const;

const DELETE_CONFIG = {
  "path": "projects/{project}/global/firewalls/{firewall}",
  "httpMethod": "DELETE",
  "parameterOrder": [
    "project",
    "firewall"
  ],
  "parameters": {
    "project": {
      "location": "path",
      "required": true
    },
    "firewall": {
      "location": "path",
      "required": true
    }
  },
  "id": "compute.firewalls.delete"
} as const;

const GlobalArgsSchema = z.object({
  name: z.string().describe("Firewall name"),
  network: z.string().describe("Network"),
});

const StateSchema = z.object({
  name: z.string().optional(),
  id: z.string().optional(),
  network: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().describe("Firewall name").optional(),
  network: z.string().describe("Network").optional(),
});

/** Swamp extension model for Google Cloud Compute Engine Firewalls. Registered at \`@swamp/gcp/compute/firewalls\`. */
export const model = {
  type: "@swamp/gcp/compute/firewalls",
  version: "2026.01.02.1",
  upgrades: [
    {
      toVersion: "2026.01.02.1",
      description: "Added: priority",
      upgradeAttributes: (old: Record<string, unknown>) => old,
    },
  ],
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "A VPC firewall rule",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a firewalls",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const body: Record<string, unknown> = {};
        if (g["name"] !== undefined) body["name"] = g["name"];
        if (g["network"] !== undefined) body["network"] = g["network"];
        if (g["name"] !== undefined) params["firewall"] = String(g["name"]);
        const result = await createResource(BASE_URL, INSERT_CONFIG, params, body, GET_CONFIG) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a firewalls",
      arguments: z.object({ identifier: z.string().describe("The name of the firewalls") }),
      execute: async (args: { identifier: string }, context: any) => {
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        const g = context.globalArgs;
        params["firewall"] = args.identifier;
        const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
        const instanceName = ((result.name ?? g.name)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update firewalls attributes",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const params: Record<string, string> = { project: projectId };
        params["firewall"] = existing["name"]?.toString() ?? "";
        const body: Record<string, unknown> = {};
        if (g["network"] !== undefined) body["network"] = g["network"];
        for (const key of Object.keys(existing)) {
          if (key === "fingerprint" || key === "labelFingerprint" || key === "etag" || key.endsWith("Fingerprint")) {
            body[key] = existing[key];
          }
        }
        const result = await updateResource(BASE_URL, PATCH_CONFIG, params, body, GET_CONFIG) as StateData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the firewalls",
      arguments: z.object({ identifier: z.string().describe("The name of the firewalls") }),
      execute: async (args: { identifier: string }, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const params: Record<string, string> = { project: projectId };
        params["firewall"] = args.identifier;
        const { existed } = await deleteResource(BASE_URL, DELETE_CONFIG, params);
        const instanceName = (g.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync firewalls state from GCP",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const projectId = await getProjectId();
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        try {
          const params: Record<string, string> = { project: projectId };
          const identifier = existing.name?.toString() ?? g["name"]?.toString();
          if (!identifier) throw new Error("No identifier found in existing state or globalArgs");
          params["firewall"] = identifier;
          const result = await readResource(BASE_URL, GET_CONFIG, params) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;
